--- a/series.html
+++ b/series.html
@@ -20,7 +20,7 @@
             <h2 class="logo">MARVEL-FLIX</h2>
             <nav>
                 <a href="index.html">Inicio</a>
-                <a href="filmes.html">Filmes</a>
+                <a href="index.html">Filmes</a>
                 <a href="series.html">Series</a>
                 <a href="documentarios.html">Documentarios</a>
                 <input type="text" class="pesquisa" id="idPesquisa" placeholder="Pesquisar">
