adiciona elementos na pagina index e criar o arquivo filmes.css

--- a/series.html
+++ b/series.html
@@ -38,12 +38,14 @@
             </div>
         </div>
         <div>
-            <button role="button" class="botao-series">
-                ASSISTA AGORA
+            <button role="button" class="botao">
+                <i class="fas fa-play"></i>
+                ASSISTIR AGORA
             </button>
-            <BUtton role="button" class="botao-series">
-                INFORMAÇÕES
-            </BUtton>
+            <button role="button" class="botao">
+                <i class="fas fa-info-circle"></i>
+                MAIS INFORMAÇÕES
+            </button>
         </div>
     </main>
     <div class="carrossel-series">
