--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+
+    <link rel="stylesheet" href="style/filmes.css">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/responsive.css"> 
 
@@ -24,5 +28,68 @@
             </nav>
          </div>   
     </header>
+    <main>
+        <div class="filmes-principal">
+             <div class="container">
+                 <h3 class=" titulo">HOMEM DE FERRO</h3>
+                 <p class="descricao">O Homem de Ferro é um personagem dos quadrinhos publicados pela Marvel Comics. Sua verdadeira identidade é o empresário e bilionário Tony Stark, que usa armaduras de alta tecnologia no combate ao crime.</p>
+             </div>
+             <div>
+                <button role="button" class="botao">
+                    <i class="fas fa-play"></i>
+                    ASSISTIR AGORA
+                </button>
+                <button role="button" class="botao">
+                    <i class="fas fa-info-circle"></i>
+                    MAIS INFORMAÇÕES
+                </button>
+
+
+            </div>
+             
+
+        </div>
+    </main>
+
+    <div><h3>MAIS ASSISTIDOS</h3></div>
+
+    <div class="carrossel-filmes">
+    <div class="owl-carousel owl-theme">
+        <div class="item">
+            <img class="box-filmes" src="img/Doutor Estranho.jpg" alt="" srcset="">
+        </div>
+        <div class="item">
+            <img class="box-filmes" src="img/Agente Carter.jpg" alt="" srcset="">
+        </div>
+        <div class="item">
+            <img class="box-filmes" src="img/Guerra Infinita.jpg" alt="" srcset="">
+        </div>
+        <div class="item">
+            <img class="box-filmes" src="img/Homen Aranha.jpg" alt="" srcset="">
+        </div>
+        <div class="item">
+            <img class="box-filmes" src="img/Venon.jpg" alt="" srcset="">
+        </div>
+        <div class="item">
+            <img class="box-filmes" src="img/Vingadores.jpg" alt="" srcset="">
+        </div>
+        <div class="item">
+            <img class="box-filmes" src="img/Vingadores Ultimato.jpg" alt="" srcset="">
+        </div>
+        
+
+    </div>
+    </div>
+
+
+
+
+
+
+
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/main.js"></script>
 </body>
 </html>
